# CompilerJudge

./: .gitignore  README.md
JudgeBackend/: CMakeLists.txt  JudgeCore.cpp  JudgeCore.h  Macros.h  Utility.h  init.cpp  init.h  judgeRun.cpp  judgeRun.h  judgeThread.cpp  judgeThread.h  main.cpp
JudgeBackend/Samples/: initSample.json
JudgeFrontend/Sample/: initSample.json
JudgeFrontend/src/internet/: SocketClient.java
JudgeFrontend/src/judge/: JudgeFrontCore.java  JudgeRecord.java  LoadConfig.java  Main.java
JudgeFrontend/src/utility/: IPAddress.java
